Fixed bottom border radius issue on mobile

--- a/src/app/pokemon/pokemon-detail-dialog/pokemon-detail-dialog.component.scss
+++ b/src/app/pokemon/pokemon-detail-dialog/pokemon-detail-dialog.component.scss
@@ -28,8 +28,7 @@
     @include mat-elevation(2);
 
     background-color: white;
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
+    border-radius: 16px;
     padding: 0;
 }
 
